--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url(Untitled-design-13.png);
+  background-image: url("OIP.jpg");
+  background-size: cover
 }
 h2 {
   text-align: center;
